--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-</head>
-<body>
-    <h1>This is my GitHub Pages website!</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <title>Search</title>
+    </head>
+    <body>
+        <header>
+            <a href="images_search.html">Image Search</a>
+            <a href="advanced_search.html">Advanced Search</a>
+        </header>
+        
+        <main>
+            <img src="google.svg.png" alt="google logo">
+            <form action="https://www.google.com/search?">
+                <input type="text" name="q" class="input_search"><br>
+                <input type="submit" class="button_search" value="Google Search">
+                <input type="submit" class="button_search" value="I’m Feeling Lucky" name="btnI">
+            </form>
+        </main>
+    </body>
 </html>
